# gomi_super_secret_videogame

./: .gitignore  CMakeLists.txt  Protocol-19-11-24.txt  builder  init.txt  main  notes
assets/: Open_map.xcf  UI.xcf  Zombie.xcf  bitmap_1.xcf  cobwebxcf.xcf  new_map.xcf  player_1.xcf  trees.xcf
engine/: CMakeLists.txt  main  new.py
engine/include/: Colliders.hpp  GameObjects.hpp  Icons.hpp  Selection.hpp  Serializer.hpp  ShaderIcon.hpp  containers.hpp  engine.hpp  list.hpp  selectable.hpp  toml.hpp  types.hpp  uids.hpp  utils.hpp  windowbar.hpp
engine/src/: GameObjects.cpp  Icons.cpp  Selection.cpp  Serializer.cpp  ShaderIcon.cpp  containers.cpp  engine.cpp  main.cpp  uids.cpp  utils.cpp  windowbar.cpp
include/: arrows.hpp  base_player.hpp  init.hpp  list.hpp  map.hpp  player.hpp  streamparser.hpp  time.hpp  types.hpp
src/: arrows.cpp  init.cpp  init.txt  list.cpp  main  main.cpp  map.cpp  player  player.cpp  time.cpp
